@@ -1,4 +1,5 @@
 16.aug (ws)
+      - new option: "show page margins"
       - optimized page layout
 15.aug (la)
       - fix #12084: Crash when running transpose with title selected
